--- a/src/app/employees/create-employee/create-employee.component.html
+++ b/src/app/employees/create-employee/create-employee.component.html
@@ -1,5 +1,5 @@
 <div class="jumbtron">
-    <h1 style="text-align: center">Employee Registration</h1>
+    <h1 style="text-align: center">New Employee Registration</h1>
     <hr>
     <div class="row">
         <div class="col-md-5">
