--- a/src/app/employees/employee-list/employee-list.component.html
+++ b/src/app/employees/employee-list/employee-list.component.html
@@ -1,5 +1,5 @@
 <div class="jumbtron">
-    <h1 style="text-align: center">Registered Employee List</h1>
+    <h1 style="text-align: center">All Registered Employee List</h1>
     <hr>
     <div class="row">
         <div class="col-md-6">
